[package]
name = "origin"
version = "0.18.0"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
]
description = "Program startup and thread support written in Rust"
documentation = "https://docs.rs/origin"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/origin"
edition = "2021"
keywords = ["linux"]
categories = ["no-std"]
include = ["src", "Cargo.toml", "COPYRIGHT", "LICENSE*", "/*.md"]

[dependencies]
linux-raw-sys = { version = "0.4.9", default-features = false, features = ["general", "no_std", "elf"] }
rustix = { version = "0.38.26", default-features = false }
bitflags = { version = "2.4.0", default-features = false }
memoffset = { version = "0.9.0", optional = true }
log = { version = "0.4.14", default-features = false, optional = true }
rustix-futex-sync = { version = "0.2.1", optional = true }

# Optional logging backends for use with "origin-program". You can use any
# external logger, but using these features allows origin to initialize the
# logger before `origin_main`, so that you can see the log messages emitted
# before `origin_main` is called.

# Enable `env_logger`; eg. recognizing `RUST_LOG=trace`. This requires `std`.
env_logger = { version = "0.10.0", optional = true, default-features = false }

# Enable `atomic-dbg`'s simple logger. This doesn't require `std`.
atomic-dbg = { version = "0.1", default-features = false, optional = true }

# Enable this when disabling origin's implementations.
libc = { version = "0.2.149", default-features = false, optional = true }
errno = { version = "0.3.3", default-features = false, optional = true }

# Special dependencies used in rustc-dep-of-std mode.
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
compiler_builtins = { version = "0.1.101", optional = true }
smallvec = { version = "1.11.1", optional = true, features = ["const_new"] }

[target.'cfg(not(target_arch = "arm"))'.dependencies.unwinding]
version = "0.2.0"
default-features = false
features = ["unwinder"]

[dev-dependencies]
assert_cmd = "2.0.12"

[features]
default = ["std", "log", "libc", "errno", "thread", "init-fini-arrays"]
std = ["rustix/std", "bitflags/std", "alloc"]
rustc-dep-of-std = [
    "dep:core",
    "dep:alloc",
    "linux-raw-sys/rustc-dep-of-std",
    "bitflags/rustc-dep-of-std",
    "rustix/rustc-dep-of-std",
    "unwinding/rustc-dep-of-std",
    "libc?/rustc-dep-of-std",
    "rustix-futex-sync/rustc-dep-of-std",
    "dep:compiler_builtins",
]

# Use origin's implementation of program startup and shutdown.
origin-program = ["rustix/use-explicitly-provided-auxv", "rustix/runtime"]

# Use origin's implementation of thread startup and shutdown.
#
# To use threads, it's also necessary to enable the "thread" feature.
origin-thread = ["memoffset", "origin-program"]

# Use origin's implementation of signal handle registrtion.
#
# To use threads, it's also necessary to enable the "signal" feature.
origin-signal = ["rustix/runtime"]

# Use origin's `_start` definition.
origin-start = ["origin-program"]

# Don't use origin's `_start` definition, but export a `start` function which
# is meant to be run very early in program startup and passed a pointer to
# the initial stack. Don't enable this when enabling "origin-start".
external-start = ["origin-program"]

# The loggers depend on a `.init_array` entry to initialize themselves, and
# `env_logger` needs it so that `c-scape` can initialize environment variables
# and make `RUST_LOG` available.
atomic-dbg-logger = ["atomic-dbg/log", "init-fini-arrays"]
env_logger = ["dep:env_logger", "init-fini-arrays"]

# Disable logging.
max_level_off = ["log/max_level_off"]

# Enable features which depend on the Rust global allocator, such as functions
# that return owned strings or `Vec`s.
alloc = ["rustix/alloc", "smallvec"]

# Enable support for threads.
thread = ["rustix/thread", "rustix/mm", "param", "rustix/process", "rustix/runtime", "rustix-futex-sync"]

# Enable support for signal handlers.
signal = ["rustix/runtime"]

# Enable support for `rustix::param`.
param = ["rustix/param"]

# Enable support for ELF `.init_array` and `.fini_array`.
init-fini-arrays = ["init-array", "fini-array"]

# Enable support for ELF `.init_array`.
init-array = []

# Enable support for ELF `.fini_array`.
fini-array = []

# Enable highly experimental support for performing startup-time relocations,
# needed to support statically-linked PIE executables.
experimental-relocate = ["rustix/mm", "rustix/runtime"]

[package.metadata.docs.rs]
features = ["origin-thread", "origin-signal", "origin-start"]
rustdoc-args = ["--cfg", "doc_cfg"]
