[package]
name = "basic"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# Origin can be depended on just like any other crate.
origin = { path = "../.." }

# This is just an example crate, and not part of the origin workspace.
[workspace]

[patch.crates-io]
# Temporary override.
rustix = { git = "https://github.com/bytecodealliance/rustix", rev = "2c56e44190eb97b5fefabe6cba4f86c50a01db1e" }
