[package]
name = "basic"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# Origin can be depended on just like any other crate.
origin = { path = "../.." }

# This is just an example crate, and not part of the origin workspace.
[workspace]

[patch.crates-io]
# Temporary override.
rustix = { git = "https://github.com/bytecodealliance/rustix", rev = "f49d028e916db8189d002eba282d7211d20b1cc4" }
