[package]
name = "external-start"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# Origin can be depended on just like any other crate. For no_std, disable
# the default features, and the desired features.
origin = { path = "../..", default-features = false, features = ["take-charge", "external-start", "thread", "alloc"] }

# Ensure that libc gets linked.
libc = { version = "0.2", default-features = false }

# Crates to help writing no_std code.
atomic-dbg = { version = "0.1.8", default-features = false }
rustix-dlmalloc = { version = "0.1.0", features = ["global"] }
compiler_builtins = { version = "0.1.112", features = ["mem", "no-f16-f128"] }

# This is just an example crate, and not part of the origin workspace.
[workspace]
