[package]
name = "external-start"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
# Origin can be depended on just like any other crate. For no_std, disable
# the default features, and the desired features.
origin = { path = "../..", default-features = false, features = ["external-start", "program-at-exit", "thread-at-exit", "eh-personality-continue", "panic-handler-trap", "nightly"] }

# Ensure that libc gets linked.
libc = { version = "0.2", default-features = false }

# Crates to help writing no_std code.
atomic-dbg = { version = "0.1.11", default-features = false }
rustix-dlmalloc = { version = "0.2.1", features = ["global"] }

# This is just an example crate, and not part of the origin workspace.
[workspace]
