[package]
name = "origin-start-lto"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# Origin can be depended on just like any other crate. For no_std, disable
# the default features, and the desired features.
origin = { path = "../..", default-features = false, features = ["origin-start", "program-at-exit", "thread-at-exit", "eh-personality-continue", "panic-handler-trap", "nightly"] }

# Crates to help writing no_std code.
atomic-dbg = { version = "0.1.11", default-features = false }
rustix-dlmalloc = { version = "0.2.0", features = ["global"] }

# This is just an example crate, and not part of the origin workspace.
[workspace]

# Enable LTO in the normal way.
[profile.release]
lto = true

# Enable LTO for debug builds too, because hey, this is an LTO demo.
[profile.dev]
lto = true
