[package]
name = "origin-start-no-alloc"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# Origin can be depended on just like any other crate. For no_std, disable
# the default features, and the desired features.
origin = { path = "../..", default-features = false, features = ["origin-program", "origin-start", "macros"] }

# Crates to help writing no_std code.
atomic-dbg = { version = "0.1.8", default-features = false }
compiler_builtins = { version = "0.1.101", features = ["mem"] }

# This is just an example crate, and not part of the origin workspace.
[workspace]
