[package]
name = "origin-start-no-alloc"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
# Origin can be depended on just like any other crate. For no_std, disable
# the default features, and the desired features.
origin = { path = "../..", default-features = false, features = ["origin-start", "eh-personality-continue", "panic-handler-trap", "nightly"] }

# Crates to help writing no_std code.
atomic-dbg = { version = "0.1.11", default-features = false }

# This is just an example crate, and not part of the origin workspace.
[workspace]
