[package]
name = "basic"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# Origin can be depended on just like any other crate.
origin = { path = "../.." }

# This is just an example crate, and not part of the origin workspace.
[workspace]

[patch.crates-io]
rustix = { git = "https://github.com/bytecodealliance/rustix", rev = "397155aa086fcdddb85319a4ae73652a27a0ab44" }
