[package]
name = "origin-start-tests"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
origin = { path = "../..", default-features = false, features = ["origin-start", "program-at-exit", "thread-at-exit", "signal", "eh-personality-continue", "panic-handler-trap", "nightly"] }
atomic-dbg = { version = "0.1.8", default-features = false }
rustix-dlmalloc = { version = "0.1.0", features = ["global"] }
rustix = { version = "0.38", default-features = false, features = ["thread"] }
rustix-futex-sync = "0.2.1"

# This is just a test crate, and not part of the origin workspace.
[workspace]

[profile.release]
debug = true
debug-assertions = true
overflow-checks = true
